// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package messagerpc;

// 生成 golang 代码后的包名
option go_package = "./messagerpc";

message EmptyReq {
}

message EmptyResp {
}

message IdReq {
  int64 id = 1;
}
message IdsReq {
  repeated int64 ids = 1;
}

message BatchResp {
  int64 success_count = 1;
}


/************** blog 留言 **************/
message RemarkNewReq {
  string user_id = 2;// 用户id
  string message_content = 4;// 留言内容
}

message RemarkUpdateReq {
  int64 id = 1;// 主键id
  int64 is_review = 8;// 是否审核
}

message RemarkDetails {
  int64 id = 1;// 主键id
  string user_id = 2;// 用户id
  string message_content = 4;// 留言内容
  string ip_address = 5;// 用户ip
  string ip_source = 6;// 用户地址
  int64 is_review = 8;// 是否审核
  int64 created_at = 9;// 发布时间
  int64 updated_at = 10;// 更新时间
}

message FindRemarkListReq {
  int64 page = 1;
  int64 page_size = 2;
  repeated string sorts = 3; // 排序
  string nickname = 4;// 昵称
  int64 is_review = 8;// 是否审核
}

message FindRemarkListResp {
  repeated RemarkDetails list = 1;
  int64 total = 2;
}

/************** blog 聊天记录 **************/

message ChatMessageNewReq {
  int64 id = 1;// 主键
  string user_id = 2;// 用户id
  string device_id = 3;// 设备id
  string topic_id = 4;// 聊天id
  string reply_msg_id = 5;// 回复消息id
  string reply_user_id = 6;// 回复用户列表
  string ip_address = 7;// ip地址
  string ip_source = 8;// ip来源
  string chat_content = 9;// 聊天内容
  string type = 10;// 类型
}

message ChatMessageDetails {
  int64 id = 1;// 主键
  string user_id = 2;// 用户id
  string device_id = 3;// 设备id
  string topic_id = 4;// 聊天id
  string reply_msg_id = 5;// 回复消息id
  string reply_user_id = 6;// 回复用户列表
  string chat_content = 7;// 聊天内容
  string ip_address = 8;// ip地址 127.0.0.1
  string ip_source = 9;// ip来源
  string type = 10;// 类型
  int64 status = 11;// 状态:0正常 1编辑 2撤回 3删除
  int64 created_at = 12;// 创建时间
  int64 updated_at = 13;// 更新时间
}

message FindChatMessageListReq {
  int64 after = 101;
  int64 before = 102;
  int64 limit = 103;
  string user_id = 2;// 用户id
  string topic_id = 3;// 聊天id
  string chat_content = 8;// 聊天内容
  string type = 9;// 类型
}

message FindChatMessageListResp {
  repeated ChatMessageDetails list = 1;
  int64 total = 2;
}

service MessageRpc {
  // 创建聊天记录
  rpc AddChatMessage(ChatMessageNewReq) returns(ChatMessageDetails);
  // 更新聊天记录
  rpc UpdateChatMessage(ChatMessageNewReq) returns(ChatMessageDetails);
  // 删除聊天记录
  rpc DeletesChatMessage(IdsReq) returns(BatchResp);
  // 查询聊天记录
  rpc GetChatMessage(IdReq) returns(ChatMessageDetails);
  // 查询聊天记录列表
  rpc FindChatMessageList(FindChatMessageListReq) returns(FindChatMessageListResp);


  // 创建留言
  rpc AddRemark(RemarkNewReq) returns(RemarkDetails);
  // 更新留言
  rpc UpdateRemark(RemarkUpdateReq) returns(RemarkDetails);
  // 删除留言
  rpc DeletesRemark(IdsReq) returns(BatchResp);
  // 查询留言
  rpc GetRemark(IdReq) returns(RemarkDetails);
  // 查询留言列表
  rpc FindRemarkList(FindRemarkListReq) returns(FindRemarkListResp);
}
